--- a/.gitignore
+++ b/.gitignore
@@ -1,60 +1,26 @@
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-
-# Logs and databases #
-######################
-*.log
-*.aux
-*.bbl
-*.blg
-*.lof
-*.synctex.gz
-
-# OS generated files #
-######################
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-Icon?
-ehthumbs.db
-Thumbs.db
-*.pyc
-
-# Sublime Stuff #
-#################
-*.sublime-project
+### SublimeText ###
+# SublimeText project files
 *.sublime-workspace
 
-# Django #
-##########
-*.log
-*.pot
-*.pyc
-.coverage
-local_settings.py
-core/settings/project.py
+### SASS ###
+### SASS Ignores - "Sassy CSS" http://sass-lang.com/
+*.sass-cache
 
-# Grunt #
-##########
+### Node ###
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
+npm-debug.log
 node_modules
+_site
+build
