--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,8 @@
-name: The platform
+name: Winjee
 markdown: redcarpet
-pygments: true
+highlighter: pygments
 permalink: /blog/:year/:month/:day/:title.html
+
+collections:
+  tutorials:
+    output: true
