--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink: /blog/:year/:title.html
 exclude: ['Gruntfile.js', 'package.json', 'node_modules']
 
 redcarpet:
-  extensions: ['tables']
+  extensions: ['tables', 'with_toc_data']
 
 collections:
   help:
