--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "GeoKey",
+    "name": "geokey-website",
     "version": "0.0.0",
     "devDependencies": {
         "grunt": "~0.4.1",
