--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,20 @@
 {
-  "name": "geokey-website",
-  "version": "0.0.0",
-  "homepage": "https://github.com/ExCiteS/geokey-website",
-  "authors": [
-    "Oliver Roick <oliver.roick@gmail.com>"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "bootstrap-sass": "~3.3.5"
-  }
+    "name": "geokey-website",
+    "version": "0.0.0",
+    "homepage": "https://github.com/ExCiteS/geokey-website",
+    "authors": [
+        "Oliver Roick <oliver.roick@gmail.com>",
+        "Julius Osokinas <j.osokinas@mappingforchange.org.uk>"
+    ],
+    "license": "MIT",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests"
+    ],
+    "dependencies": {
+        "bootstrap-sass": "~3.3.5"
+    }
 }
