--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "geokey-website",
     "version": "0.0.0",
     "devDependencies": {
-        "grunt": "~0.4.1",
-        "grunt-contrib-imagemin": "~0.4.0",
-        "grunt-contrib-watch": "~0.5.3",
-        "grunt-contrib-sass": "~0.6.0",
-        "grunt-contrib-copy": "~0.5.0"
+        "grunt": "*",
+        "grunt-contrib-imagemin": "*",
+        "grunt-contrib-watch": "*",
+        "grunt-contrib-sass": "*",
+        "grunt-contrib-copy": "*"
     }
 }
